feat(6.3.0): Phase 2 — persistence & transaction correctness (#342)
Closes the gap between what the ORM and the transaction interceptor declare and what they do.

Phase goal (ROADMAP, verbatim): The ORM and the transaction interceptor do exactly what their annotations and javadoc say, with no connection or operator state shared across a DataSource or a plugin boundary.

Requirements: FOUND-04, SILENT-01, SILENT-02, SILENT-03, SILENT-04, WIRE-04, WIRE-13, WIRE-14, WIRE-15.

Gates: 4718 tests / 0 failures (baseline 4482, +236). `mvn -B package javadoc:javadoc -DskipTests` exit 0. Phase 1's 13 test classes all green. Security audit SECURED, threats_open 0 across 35 threat IDs. Code review's 3 Criticals closed. Phase verification 5/5 success criteria, 9/9 requirement IDs.

Behaviour changes module authors must read, recorded in COMPATIBILITY.md with a worked before/after:
- `WhereCondition`'s `Comparison` is now honoured on relational backends — the same query object can return different rows than on 6.2.5.
- `@Transactional(rollbackFor = ...)` adds to the default rule instead of replacing it; shallowest-depth match wins an overlap, rollback wins a tie.
- Entity lifecycle hooks now fire, exactly once per operation, on both backends. They never fired before.
- Audit columns are populated; they were always NULL.
- `del()` with no conditions is refused instead of emitting a bare DELETE.
- Requesting an operator for an entity you do not own is refused with `ErrorCode.ENTITY_NOT_OWNED`.

Removals: `Propagation.NESTED`; `TransactionManager`'s three JDBC methods demoted to deprecated defaults that throw; both legacy `DataStore.getOperator` overloads deprecated for removal.

New: `@Transactional` works on the JSON backend; `timeout` is enforced per statement against a shared shrinking budget on JDBC; `REQUIRES_NEW`/`NOT_SUPPORTED` genuinely suspend on all three backends.

Planned as 10 plans, shipped as 14. Each addition came from a different verification layer finding what the